--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -18,7 +18,6 @@
 
 body {
    min-width: 480px;
-   /* background-color: var(--color); */
    background: var(--dark);
    font-family: 'AvenirNextCyr', sans-serif;
    font-weight: 400;
@@ -35,6 +34,7 @@ body {
    margin: 0 auto;
    width: 480px;
    background: var(--light);
+   position: relative;
 }
 
 section {
@@ -68,6 +68,31 @@ b {
 }
 
 /* button */
+
+.top-btn {
+   display: none;
+   position: fixed;
+   bottom: 20px;
+   right: 30px;
+   z-index: 99;
+   font-size: 18px;
+   border: none;
+   outline: none;
+   background-color: var(--bg-primary);
+   color: white;
+   cursor: pointer;
+   padding: 15px 15px 20px;
+   border-radius: 4px;
+   min-width: 60px;
+   width: auto;
+   text-align: center;
+   font-size: 30px;
+   text-decoration: none;
+}
+
+.top-btn:hover {
+   background-color: #555;
+}
 
 .button {
    position: relative;
