moderate img, icons, styles

--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -8,10 +8,10 @@
    --color: #149cc7;
 
    --fire-orange: linear-gradient(90deg, rgba(233, 227, 6, 1) 16%, rgba(255, 132, 0, 1) 100%);
-   /* --fire-red: linear-gradient(90deg, rgb(197, 137, 237) 0%, rgb(255, 98, 98) 50%, rgb(252, 243, 69) 100%); */
+   /* --fire-orange: linear-gradient(90deg, rgb(197, 137, 237) 0%, rgb(255, 98, 98) 50%, rgb(252, 243, 69) 100%); */
 
-   /* --fire-red: linear-gradient(90deg, rgb(197, 137, 237) 0%, rgb(255, 98, 98) 50%, rgb(252, 243, 69) 100%); */
    --fire-red: linear-gradient(270deg, rgba(233, 227, 6, 1) 16%, rgba(110, 57, 6, 1) 60%, rgba(182, 182, 182, 1) 100%);
+   /* --fire-red: linear-gradient(90deg, rgb(197, 137, 237) 0%, rgb(255, 98, 98) 50%, rgb(252, 243, 69) 100%); */
 }
 
 /* styles */
@@ -58,13 +58,6 @@ img {
 
 b {
    font-weight: 700;
-}
-
-.owl-height {
-   -webkit-transition: height 0.3s ease-in-out;
-   -o-transition: height 0.3s ease-in-out;
-   -moz-transition: height 0.3s ease-in-out;
-   transition: height 0.3s ease-in-out;
 }
 
 /* .offer_section.offer3 .title_block.black {
@@ -222,9 +215,10 @@ h2.title > span {
 
 .offer_section.offer3 .discount_block {
    padding: 18px 0 0;
-   width: 79px;
-   height: 101px;
-   background: url('../images/offer3__discount_bg.png') center no-repeat;
+   width: 100px;
+   height: 91px;
+   background: url('../images/disc-png.png') center no-repeat;
+   background-size: cover;
    color: var(--light);
    text-align: center;
    position: absolute;
@@ -293,116 +287,29 @@ h2.title > span {
 
 .offer_section ul {
    margin: 25px 0;
+   margin-left: 25px;
 }
 
 .offer_section ul li {
    margin: 0 30px 12px;
    padding: 0 0 0 32px;
-   background: url('../images/offer__tick_icon.png') left 1px no-repeat;
+   position: relative;
+   /* background: var(--bg-primary); */
+   /* color: var(--light); */
+}
+
+.offer_section ul li::before {
+   display: block;
+   content: url('../images/svg/done-ring-round-svgrepo-com.svg');
+   height: 24px;
+   width: 24px;
+   left: 5px;
+   bottom: 0;
+   position: absolute;
 }
 
 .offer_section ul li:last-child {
    margin: 0 30px;
-}
-
-.offer_section.offer3 .timer_block {
-   padding: 8px 10px 7px 20px;
-}
-
-.offer_section.offer3 .timer_block p {
-   float: left;
-   margin: 6px 0 0;
-   padding: 0 0 0 40px;
-   width: 170px;
-   background: url('../images/offer3__clock_icon.png') left center no-repeat;
-   font-size: 14px;
-   line-height: 16px;
-}
-
-.offer_section.offer3 .timer {
-   float: right;
-   width: 240px;
-}
-
-.offer_section.offer3 .timer_item {
-   float: left;
-   width: 60px;
-   text-align: center;
-}
-
-.offer_section.offer3 .timer_item .text {
-   margin: 0 0 4px;
-   font-size: 12px;
-   line-height: 12px;
-}
-
-.offer_section.offer3 .timer_item .count {
-   font-weight: 700;
-   font-size: 30px;
-   line-height: 30px;
-   position: relative;
-}
-
-.timer_block p {
-   float: left;
-   margin: 6px 0 0;
-   padding: 0 0 0 40px;
-   width: 170px;
-   background: red;
-   font-size: 14px;
-   line-height: 16px;
-}
-
-.timer {
-   float: right;
-   width: 240px;
-}
-
-.timer_item {
-   float: left;
-   width: 60px;
-   text-align: center;
-}
-
-.timer_item .text {
-   margin: 0 0 4px;
-   font-size: 12px;
-   line-height: 12px;
-}
-
-.timer_item .count {
-   font-weight: 700;
-   font-size: 30px;
-   line-height: 30px;
-   position: relative;
-}
-
-.timer_item .count:before {
-   display: block;
-   content: ':';
-   width: 10px;
-   line-height: 24px;
-   position: absolute;
-   top: 0;
-   right: -5px;
-}
-
-.timer_item:last-child .count:before {
-   display: none;
-}
-
-.offer_section.offer3 .timer_item .count:before {
-   display: block;
-   content: ':';
-   width: 10px;
-   line-height: 24px;
-   position: absolute;
-   top: 0;
-   right: -5px;
-}
-
-.offer_section.offer3 .timer_item:last-child .count:before {
-   display: none;
 }
 
 .offer_section.offer3 .benefits_list {
@@ -440,18 +347,15 @@ h2.title > span {
 }
 
 .offer_section.offer3 .benefits_list .benefit_item:nth-child(1):before {
-   background-image: url('../images/offer3__benefit1_icon.png');
-   background: yellowgreen;
+   background-image: url('../images/svg/guarantee-svgrepo-2.svg');
 }
 
 .offer_section.offer3 .benefits_list .benefit_item:nth-child(2):before {
-   background-image: url('../images/offer3__benefit2_icon.png');
-   background: yellowgreen;
+   background-image: url('../images/svg/deadline-svgrepo-com.svg');
 }
 
 .offer_section.offer3 .benefits_list .benefit_item:nth-child(3):before {
-   background-image: url('../images/offer3__benefit3_icon.png');
-   background: yellowgreen;
+   background-image: url('../images/svg/payment-ecommerce-guarantee-safe-svgrepo-com.svg');
 }
 
 .products_count {
@@ -488,22 +392,16 @@ h2.title > span {
 
 .offer_section .field[name='name'] {
    margin-top: 25px;
-   background-image: url('../images/offer__name_icon.png');
-   background: yellowgreen;
-
    background-position: 23px center;
    background-repeat: no-repeat;
 }
 
 .offer_section .field[name='phone'] {
-   background-image: url('../images/offer__phone_icon.png');
-   background: yellowgreen;
-
    background-position: 20px center;
    background-repeat: no-repeat;
 }
 
-select {
+/* select {
    display: block;
    margin: 0 auto 20px;
    padding: 0 20px 0 80px;
@@ -518,15 +416,15 @@ select {
    font-weight: 400;
    font-size: 16px;
    color: #333;
-}
+} */
 
-select {
+/* select {
    background-image: url('../images/offer__arrow_icon.png');
    background: yellowgreen;
 
    background-position: 20px center;
    background-repeat: no-repeat;
-}
+} */
 
 .offer_section .field::-webkit-input-placeholder {
    opacity: 1;
@@ -588,33 +486,6 @@ select {
    position: absolute;
    top: 0;
    left: 0;
-}
-
-/* slider */
-
-.slider .owl-prev,
-.slider .owl-next {
-   width: 40px;
-   height: 40px;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   border-radius: 50%;
-   background: #149cc7 url('../images/slider__arrows.png') no-repeat;
-   background: yellowgreen;
-
-   position: absolute;
-   top: 50%;
-   margin-top: -20px;
-}
-
-.slider .owl-prev {
-   background-position: left center;
-   left: 20px;
-}
-
-.slider .owl-next {
-   background-position: right center;
-   right: 20px;
 }
 
 /* image */
@@ -879,61 +750,6 @@ img.image {
    font-weight: 700;
 }
 
-.reviews_list4 .owl-dots {
-   width: 100%;
-   font-size: 0;
-   line-height: 0;
-   letter-spacing: -1px;
-   text-align: center;
-   position: absolute;
-   bottom: 33px;
-   left: 0;
-}
-
-.reviews_list4 .owl-dot {
-   display: inline-block;
-   vertical-align: middle;
-   margin: 0 4px;
-   width: 10px;
-   height: 10px;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   border-radius: 50%;
-   background: #333;
-}
-
-.reviews_list4 .owl-dot.active {
-   width: 20px;
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   border-radius: 5px;
-   background: var(--bg-primary);
-}
-
-.reviews_list4 .owl-prev,
-.reviews_list4 .owl-next {
-   width: 40px;
-   height: 40px;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   border-radius: 50%;
-   background: #149cc7 url('../images/slider__arrows.png') no-repeat;
-   background: yellowgreen;
-
-   position: absolute;
-   top: 100px;
-}
-
-.reviews_list4 .owl-prev {
-   background-position: left center;
-   left: -20px;
-}
-
-.reviews_list4 .owl-next {
-   background-position: right center;
-   right: -20px;
-}
-
 /* order steps 1 */
 
 /* order info 2 */
@@ -1055,35 +871,14 @@ section.s2 .title span {
    margin: 25px 0 0;
    position: relative;
 }
-.s5 .img:after {
-   content: '';
-   width: 26px;
-   height: 70px;
-   background: url('../images/arrow.png') 50% 50% no-repeat;
-   background: yellowgreen;
 
-   position: absolute;
-   bottom: -24px;
-   left: 10px;
-}
 .s5 .img > img {
    display: block;
 }
 .s5 .center {
    text-align: center;
 }
-.s6 {
-   background: var(--bg-primary);
-   color: var(--light);
-   padding-bottom: 0;
-}
-.s6 > img {
-   display: block;
-   margin: 0px auto;
-}
-.s7 .button {
-   margin-top: 25px;
-}
+
 .s8 .button {
    margin-top: 25px;
 }
