--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -71,8 +71,8 @@ b {
 }
 
 .bg-red {
-   background: red;
-   color: white;
+   background: #ee3737 !important;
+   color: var(--light) !important;
 }
 
 /* button */
@@ -167,15 +167,23 @@ b {
 
 /* titles */
 
-h2.title {
-   margin: 0 0 30px;
+h3.title {
+   display: block;
+   text-align: center;
+   margin: 20px auto 20px;
+   width: 100%;
+   text-transform: uppercase;
+}
+
+p.title {
+   margin: 0 0 20px;
    font-weight: 700;
    font-size: 30px;
    line-height: 36px;
    text-align: center;
 }
 
-h2.title > span {
+p.title > span {
    color: var(--color);
 }
 
@@ -206,7 +214,7 @@ h2.title > span {
 }
 
 .offer_section.offer3 .title_block .main_title {
-   margin: 0 0 5px;
+   margin: 10px 0 5px;
 }
 
 .offer_section .title_block .subtitle {
@@ -227,7 +235,7 @@ h2.title > span {
    padding: 18px 0 0;
    width: 100px;
    height: 91px;
-   background: url('../images/disc-png.png') center no-repeat;
+   background: url('../images/disc-png-0.png') center no-repeat;
    background-size: cover;
    color: var(--light);
    text-align: center;
@@ -330,12 +338,14 @@ h2.title > span {
 
 .benefit_item h2,
 .benefit_item p {
-   max-width: 90%;
+   max-width: 84%;
    margin: auto;
 }
 
-.benefit_item p {
-   max-width: 84%;
+h3.title,
+.benefit_item h2 {
+   font-size: 18px;
+   max-width: 90%;
 }
 
 .offer_section.offer3 .benefits_list .benefit_item {
@@ -728,7 +738,7 @@ img.image {
    background: var(--bg-primary);
 }
 
-.reviews4_section h2 {
+.reviews4_section p.title {
    color: var(--light);
 }
 
