--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -108,6 +108,7 @@ b {
    background-color: #555;
 }
 
+.button-hover,
 .button {
    position: relative;
    display: block;
@@ -144,8 +145,6 @@ b {
    position: absolute;
    top: 0;
    left: 0;
-   width: 100%;
-   height: 100%;
    background: var(--fire-red);
    transform: translateY(100%);
    border-radius: 6px;
@@ -176,15 +175,24 @@ h3.title {
 }
 
 p.title {
-   margin: 0 0 20px;
+   color: var(--color);
+   margin: 0 auto 20px;
    font-weight: 700;
    font-size: 30px;
    line-height: 36px;
    text-align: center;
+   max-width: 86%;
 }
 
 p.title > span {
    color: var(--color);
+}
+
+.s4 p.title {
+   color: var(--light);
+}
+.order_info2_section p.title {
+   color: var(--dark);
 }
 
 /* header */
@@ -647,7 +655,7 @@ img.image {
 }
 
 .benefits_list3 .benefit_item:last-child {
-   margin: 0 20px 10px;
+   margin: 0 20px 40px;
 }
 
 .benefits_list3 .benefit_item img {
@@ -659,7 +667,7 @@ img.image {
    border-radius: 4px;
    background: #e6e6e6;
    position: absolute;
-   top: 35%;
+   top: 45%;
    margin-top: -75px;
    right: -10px;
 }
