--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -23,7 +23,7 @@ body {
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
-   color: var(--dark);
+   color: var(--text-dark);
    cursor: default;
    background-image: url('../images/wardrobe-lighting.webp');
    background-size: contain;
@@ -600,7 +600,7 @@ img.image {
 }
 
 .benefits_list1 .benefit_item:nth-last-child(2) {
-   margin: 0 0px 30 0;
+   margin: 0 0 30px 0;
 }
 
 .benefits_list1 .benefit_item:last-child {
