change css div-form-submit html

--- a/Светильники/styles/styles.css
+++ b/Светильники/styles/styles.css
@@ -108,6 +108,10 @@ b {
    background-color: #555;
 }
 
+.div-form-submit {
+   position: relative;
+}
+
 .div-form-submit,
 .button-hover,
 .button {
