--- a/esoteric/vite-sass/src/scss/_badges.scss
+++ b/esoteric/vite-sass/src/scss/_badges.scss
@@ -1,29 +1,30 @@
-@use "fonts";
+@use 'fonts';
 
 .badges {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
+   display: flex;
+   flex-flow: wrap;
+   justify-content: center;
+   align-items: center;
+   gap: 2rem;
 
-  &-item {
-  }
+   &-item {
+   }
 
-  &-link {
-    display: block;
-    border-radius: 5rem;
-    color: var(--main-text-color);
-    text-decoration: none;
-    background: var(--brand-color);
-    padding: 0.8rem 1.8rem;
-    transition: 0.2s ease;
+   &-link {
+      display: block;
+      border-radius: 5rem;
+      color: var(--main-text-color);
+      text-decoration: none;
+      background: var(--brand-color);
+      padding: 0.8rem 1.8rem;
+      transition: 0.2s ease;
 
-    &:hover {
-      background: var(--brand-light-color);
-    }
-  }
+      &:hover {
+         background: var(--brand-light-color);
+      }
+   }
 }
+
 .no-link {
-  pointer-events: none;
+   pointer-events: none;
 }
