--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -21,37 +21,31 @@ body {
    flex-flow: column;
 }
 
-.sass-btn {
-   border: 4px solid var(--brand-color) !important;
-   cursor: pointer;
-   padding: 2px 20px;
-   margin: 10px 0;
-}
-
-.counter {
-   display: inline-block;
-   min-width: 80px;
-}
-
 .container {
-   max-width: 1180px;
-   margin: 0 auto;
-   padding: 0 2rem;
+   margin: 0;
 }
 
 .dark {
    color-scheme: dark;
 }
 
+p,
+.text {
+   font-size: 2.4rem;
+}
+
+h1,
+h2,
+h3,
 .title {
    font-size: 4rem;
+}
 
-   span {
-      font-size: 5rem;
-      text-transform: uppercase;
-      font-weight: 700;
-      @include mixins.text-gradient;
-   }
+h4,
+h5,
+h6,
+.subtitle {
+   font-size: 3rem;
 }
 
 .footer {
@@ -60,10 +54,5 @@ body {
 
    a {
       text-decoration: none;
-      color: var(--brand-color);
-      transition: 0.2s ease;
-      &:hover {
-         color: var(--brand-light-color);
-      }
    }
 }
