--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -2,31 +2,85 @@
 
 html {
    font-size: 8px;
+   scroll-behavior: smooth;
    @include mixins.viewport-md {
       font-size: 10px;
    }
 }
+
+.dark {
+   color-scheme: dark;
+}
+
 body {
    font-family: 'Montserrat';
-   background: var(--main-color);
-   color: var(--main-text-color);
+   background: var(--surface-container-lowest);
+   color: var(--primary);
    font-size: 2.4rem;
    transition: background 0.2s ease, color 0.2s ease;
 }
 
 .wrapper {
-   min-height: 100vh;
+   min-height: 300vh;
+   height: 100vh;
    text-align: center;
    display: flex;
    flex-flow: column;
+   position: relative;
+
+   overflow-y: scroll;
+   scroll-snap-type: y mandatory;
+   -ms-scroll-snap-type: y mandatory;
+}
+
+.toggle_theme-btn,
+.top-btn {
+   display: block;
+   position: absolute;
+   min-width: 5rem;
+   min-height: 5rem;
+   right: 5%;
+   font-size: 3rem;
+   font-weight: 600;
+   color: var(--primary);
+   background-color: var(--on-primary);
+   padding: 10px;
+   cursor: pointer;
+   border: 4px solid var(--primary) !important;
+   transition: 0.2s ease;
+}
+
+.toggle_theme-btn {
+   top: 1%;
+   right: unset;
+   left: -250px;
+   border-top-right-radius: 3rem;
+   border-bottom-right-radius: 3rem;
+   width: 300px;
+   text-align: right;
+   box-shadow: 3px 4px 10px -4px var(--inverse-surface);
+
+   &::before {
+      content: 'Switch Theme @';
+   }
+
+   &:hover {
+      left: 0;
+   }
+}
+
+.top-btn {
+   position: fixed;
+   font-size: 2rem;
+   bottom: 5%;
+
+   &:hover {
+      border-radius: 2rem;
+   }
 }
 
 .container {
    margin: 0;
-}
-
-.dark {
-   color-scheme: dark;
 }
 
 p,
