--- a/esoteric/vite-sass/src/scss/_variables.scss
+++ b/esoteric/vite-sass/src/scss/_variables.scss
@@ -1,65 +1,86 @@
-@use '../colors/beige/css/dark.module' as dark;
-@use '../colors/beige/css/light.module' as light;
+@use '../colors/beige/css/light' as light;
+@use '../colors/beige/css/dark' as dark;
 
 :root {
    color-scheme: light dark;
 
-   --primary: light-dark(light.$md-sys-color-primary, dark.$md-sys-color-primary);
-   --surface-tint: light-dark(light.$md-sys-color-surface-tint, dark.$md-sys-color-surface-tint)
-   --on-primary: light-dark(light.$md-sys-color-on-primary, dark.$md-sys-color-on-primary)
-   --primary-container: light-dark(light.$md-sys-color-primary-container, dark.$md-sys-color-primary-container)
-   --on-primary-container: light-dark(light.$md-sys-color-on-primary-container, dark.$md-sys-color-on-primary-container)
-   --secondary: light-dark(light.$md-sys-color-secondary, dark.$md-sys-color-secondary)
-   --on-secondary:light-dark(light.$md-sys-color-on-secondary, dark.$md-sys-color-on-secondary)
-   --secondary-container: light-dark(light.$md-sys-color-secondary-container, dark.$md-sys-color-secondary-container)
-   --on-secondary-container: light-dark(light.$md-sys-color-on-secondary-container, dark.$md-sys-color-on-secondary-container)
-   --tertiary: light-dark(light.$md-sys-color-tertiary, dark.$md-sys-color-tertiary)
-   --on-tertiary: light-dark(light.$md-sys-color-on-tertiary, dark.$md-sys-color-on-tertiary)
-   --tertiary-container: light-dark(light.$md-sys-color-tertiary-container, dark.$md-sys-color-tertiary-container)
-   --on-tertiary-container: light-dark(light.$md-sys-color-on-tertiary-container, dark.$md-sys-color-on-tertiary-container)
-   --error: light-dark(light.$md-sys-color-error, dark.$md-sys-color-error)
-   --on-error: light-dark(light.$md-sys-color-on-error, dark.$md-sys-color-on-error)
-   --error-container: light-dark(light.$md-sys-color-error-container, dark.$md-sys-color-error-container)
-   --on-error-container: light-dark(light.$md-sys-color-on-error-container, dark.$md-sys-color-on-error-container)
-   --background: light-dark(light.$md-sys-color-background, dark.$md-sys-color-background)
-   --on-background: light-dark(light.$md-sys-color-on-background, dark.$md-sys-color-on-background)
-   --surface: light-dark(light.$md-sys-color-surface, dark.$md-sys-color-surface)
-   --on-surface: light-dark(light.$md-sys-color-on-surface, dark.$md-sys-color-on-surface)
-   --surface-variant: light-dark(light.$md-sys-color-surface-variant, dark.$md-sys-color-surface-variant)
-   --on-surface-variant: light-dark(light.$md-sys-color-on-surface-variant, dark.$md-sys-color-on-surface-variant)
-   --outline: light-dark(light.$md-sys-color-outline, dark.$md-sys-color-outline)
-   --outline-variant: light-dark(light.$md-sys-color-outline-variant, dark.$md-sys-color-outline-variant)
-   --shadow: light-dark(light.$md-sys-color-shadow, dark.$md-sys-color-shadow)
-   --scrim: light-dark(light.$md-sys-color-scrim, dark.$md-sys-color-scrim)
-   --inverse-surface: light-dark(light.$md-sys-color-inverse-surface, dark.$md-sys-color-inverse-surface)
-   --inverse-on-surface: light-dark(light.$md-sys-color-inverse-on-surface, dark.$md-sys-color-inverse-on-surface)
-   --inverse-primary: light-dark(light.$md-sys-color-inverse-primary, dark.$md-sys-color-inverse-primary)
-   --primary-fixed: light-dark(light.$md-sys-color-primary-fixed, dark.$md-sys-color-primary-fixed)
-   --on-primary-fixed: light-dark(light.$md-sys-color-on-primary-fixed, dark.$md-sys-color-on-primary-fixed)
-   --primary-fixed-dim: light-dark(light.$md-sys-color-primary-fixed-dim, dark.$md-sys-color-primary-fixed-dim)
-   --on-primary-fixed-variant: light-dark(light.$md-sys-color-on-primary-fixed-variant, dark.$md-sys-color-on-primary-fixed-variant)
-   --secondary-fixed: light-dark(light.$md-sys-color-secondary-fixed, dark.$md-sys-color-secondary-fixed)
-   --on-secondary-fixed: light-dark(light.$md-sys-color-on-secondary-fixed, dark.$md-sys-color-on-secondary-fixed)
-   --secondary-fixed-dim: light-dark(light.$md-sys-color-secondary-fixed-dim, dark.$md-sys-color-secondary-fixed-dim)
-   --on-secondary-fixed-variant: light-dark(light.$md-sys-color-on-secondary-fixed-variant, dark.$md-sys-color-on-secondary-fixed-variant)
-   --tertiary-fixed: light-dark(light.$md-sys-color-tertiary-fixed, dark.$md-sys-color-tertiary-fixed)
-   --on-tertiary-fixed: light-dark(light.$md-sys-color-on-tertiary-fixed, dark.$md-sys-color-on-tertiary-fixed)
-   --tertiary-fixed-dim: light-dark(light.$md-sys-color-tertiary-fixed-dim, dark.$md-sys-color-tertiary-fixed-dim)
-   --on-tertiary-fixed-variant: light-dark(light.$md-sys-color-on-tertiary-fixed-variant, dark.$md-sys-color-on-tertiary-fixed-variant)
-   --surface-dim: light-dark(light.$md-sys-color-surface-dim, dark.$md-sys-color-surface-dim)
-   --surface-bright: light-dark(light.$md-sys-color-surface-bright, dark.$md-sys-color-surface-bright)
-   --surface-container-lowest: light-dark(light.$md-sys-color-surface-container-lowest, dark.$md-sys-color-surface-container-lowest)
-   --surface-container-low: light-dark(light.$md-sys-color-surface-container-low, dark.$md-sys-color-surface-container-low)
-   --surface-container: light-dark(light.$md-sys-color-surface-container, dark.$md-sys-color-surface-container)
-   --surface-container-high: light-dark(light.$md-sys-color-surface-container-high, dark.$md-sys-color-surface-container-high)
-   --surface-container-highest: light-dark(light.$md-sys-color-surface-container-highest, dark.$md-sys-color-surface-container-highest)
-
-   --main-color: #1e1e20;
-   --second-color: #9b4a73;
-   --mute-color: #313136;
-   --main-text-color: rgba(255, 255, 245, 0.86);
-   --second-text-color: rgba(235, 235, 245, 0.6);
-   --hero-name-background: linear-gradient(120deg, #cd6699 30%, #9b4a73);
-   --brand-color: #cd6699;
-   --brand-light-color: #9b4a73;
+   --primary: #{light-dark(light.$md-sys-color-primary, dark.$md-sys-color-primary)};
+   --surface-tint: #{light-dark(light.$md-sys-color-surface-tint, dark.$md-sys-color-surface-tint)};
+   --on-primary: #{light-dark(light.$md-sys-color-on-primary, dark.$md-sys-color-on-primary)};
+   --primary-container: #{light-dark(light.$md-sys-color-primary-container, dark.$md-sys-color-primary-container)};
+   --on-primary-container: #{light-dark(
+         light.$md-sys-color-on-primary-container,
+         dark.$md-sys-color-on-primary-container
+      )};
+   --secondary: #{light-dark(light.$md-sys-color-secondary, dark.$md-sys-color-secondary)};
+   --on-secondary: #{light-dark(light.$md-sys-color-on-secondary, dark.$md-sys-color-on-secondary)};
+   --secondary-container: #{light-dark(light.$md-sys-color-secondary-container, dark.$md-sys-color-secondary-container)};
+   --on-secondary-container: #{light-dark(
+         light.$md-sys-color-on-secondary-container,
+         dark.$md-sys-color-on-secondary-container
+      )};
+   --tertiary: #{light-dark(light.$md-sys-color-tertiary, dark.$md-sys-color-tertiary)};
+   --on-tertiary: #{light-dark(light.$md-sys-color-on-tertiary, dark.$md-sys-color-on-tertiary)};
+   --tertiary-container: #{light-dark(light.$md-sys-color-tertiary-container, dark.$md-sys-color-tertiary-container)};
+   --on-tertiary-container: #{light-dark(
+         light.$md-sys-color-on-tertiary-container,
+         dark.$md-sys-color-on-tertiary-container
+      )};
+   --error: #{light-dark(light.$md-sys-color-error, dark.$md-sys-color-error)};
+   --on-error: #{light-dark(light.$md-sys-color-on-error, dark.$md-sys-color-on-error)};
+   --error-container: #{light-dark(light.$md-sys-color-error-container, dark.$md-sys-color-error-container)};
+   --on-error-container: #{light-dark(light.$md-sys-color-on-error-container, dark.$md-sys-color-on-error-container)};
+   --background: #{light-dark(light.$md-sys-color-background, dark.$md-sys-color-background)};
+   --on-background: #{light-dark(light.$md-sys-color-on-background, dark.$md-sys-color-on-background)};
+   --surface: #{light-dark(light.$md-sys-color-surface, dark.$md-sys-color-surface)};
+   --on-surface: #{light-dark(light.$md-sys-color-on-surface, dark.$md-sys-color-on-surface)};
+   --surface-variant: #{light-dark(light.$md-sys-color-surface-variant, dark.$md-sys-color-surface-variant)};
+   --on-surface-variant: #{light-dark(light.$md-sys-color-on-surface-variant, dark.$md-sys-color-on-surface-variant)};
+   --outline: #{light-dark(light.$md-sys-color-outline, dark.$md-sys-color-outline)};
+   --outline-variant: #{light-dark(light.$md-sys-color-outline-variant, dark.$md-sys-color-outline-variant)};
+   --shadow: #{light-dark(light.$md-sys-color-shadow, dark.$md-sys-color-shadow)};
+   --scrim: #{light-dark(light.$md-sys-color-scrim, dark.$md-sys-color-scrim)};
+   --inverse-surface: #{light-dark(light.$md-sys-color-inverse-surface, dark.$md-sys-color-inverse-surface)};
+   --inverse-on-surface: #{light-dark(light.$md-sys-color-inverse-on-surface, dark.$md-sys-color-inverse-on-surface)};
+   --inverse-primary: #{light-dark(light.$md-sys-color-inverse-primary, dark.$md-sys-color-inverse-primary)};
+   --primary-fixed: #{light-dark(light.$md-sys-color-primary-fixed, dark.$md-sys-color-primary-fixed)};
+   --on-primary-fixed: #{light-dark(light.$md-sys-color-on-primary-fixed, dark.$md-sys-color-on-primary-fixed)};
+   --primary-fixed-dim: #{light-dark(light.$md-sys-color-primary-fixed-dim, dark.$md-sys-color-primary-fixed-dim)};
+   --on-primary-fixed-variant: #{light-dark(
+         light.$md-sys-color-on-primary-fixed-variant,
+         dark.$md-sys-color-on-primary-fixed-variant
+      )};
+   --secondary-fixed: #{light-dark(light.$md-sys-color-secondary-fixed, dark.$md-sys-color-secondary-fixed)};
+   --on-secondary-fixed: #{light-dark(light.$md-sys-color-on-secondary-fixed, dark.$md-sys-color-on-secondary-fixed)};
+   --secondary-fixed-dim: #{light-dark(light.$md-sys-color-secondary-fixed-dim, dark.$md-sys-color-secondary-fixed-dim)};
+   --on-secondary-fixed-variant: #{light-dark(
+         light.$md-sys-color-on-secondary-fixed-variant,
+         dark.$md-sys-color-on-secondary-fixed-variant
+      )};
+   --tertiary-fixed: #{light-dark(light.$md-sys-color-tertiary-fixed, dark.$md-sys-color-tertiary-fixed)};
+   --on-tertiary-fixed: #{light-dark(light.$md-sys-color-on-tertiary-fixed, dark.$md-sys-color-on-tertiary-fixed)};
+   --tertiary-fixed-dim: #{light-dark(light.$md-sys-color-tertiary-fixed-dim, dark.$md-sys-color-tertiary-fixed-dim)};
+   --on-tertiary-fixed-variant: #{light-dark(
+         light.$md-sys-color-on-tertiary-fixed-variant,
+         dark.$md-sys-color-on-tertiary-fixed-variant
+      )};
+   --surface-dim: #{light-dark(light.$md-sys-color-surface-dim, dark.$md-sys-color-surface-dim)};
+   --surface-bright: #{light-dark(light.$md-sys-color-surface-bright, dark.$md-sys-color-surface-bright)};
+   --surface-container-lowest: #{light-dark(
+         light.$md-sys-color-surface-container-lowest,
+         dark.$md-sys-color-surface-container-lowest
+      )};
+   --surface-container-low: #{light-dark(
+         light.$md-sys-color-surface-container-low,
+         dark.$md-sys-color-surface-container-low
+      )};
+   --surface-container: #{light-dark(light.$md-sys-color-surface-container, dark.$md-sys-color-surface-container)};
+   --surface-container-high: #{light-dark(
+         light.$md-sys-color-surface-container-high,
+         dark.$md-sys-color-surface-container-high
+      )};
+   --surface-container-highest: #{light-dark(
+         light.$md-sys-color-surface-container-highest,
+         dark.$md-sys-color-surface-container-highest
+      )};
 }
