--- a/esoteric/vite-sass/src/scss/style.scss
+++ b/esoteric/vite-sass/src/scss/style.scss
@@ -1,6 +1,6 @@
-@use "fonts";
-@use "reset";
-@use "variables";
-@use "global";
-@use "main";
-@use "badges";
+@use 'fonts';
+@use 'reset';
+@use 'variables';
+@use 'global';
+@use 'main';
+@use 'badges';
