--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -18,4 +18,69 @@
       width: 100%;
       height: 100%;
    }
+
+   min-height: 300vh;
+   height: 100vh;
+   text-align: center;
+   display: flex;
+   flex-flow: column;
+   position: relative;
+
+   overflow-y: scroll;
+   scroll-snap-type: y mandatory;
+   -ms-scroll-snap-type: y mandatory;
+}
+
+.toggle_theme-btn,
+.top-btn {
+   opacity: 0.3;
+   position: absolute;
+   right: 5%;
+   font-size: 1.2rem;
+   font-weight: 600;
+   color: var(--primary);
+   background-color: var(--on-primary);
+   width: auto;
+   padding: 1rem;
+   cursor: pointer;
+   border: 2px solid var(--primary) !important;
+   transition: 0.2s ease;
+   box-shadow: 3px 4px 10px -4px var(--inverse-surface);
+   &:hover {
+      opacity: 1;
+   }
+}
+
+.toggle_theme-btn {
+   top: 1%;
+   right: unset;
+   border-top-right-radius: 3rem;
+   border-bottom-right-radius: 3rem;
+   width: 3.4rem;
+   min-width: 20px;
+   height: 40px;
+   overflow: hidden;
+   white-space: nowrap;
+   text-align: right;
+
+   &::before {
+      content: '@';
+   }
+
+   &:hover {
+      width: 130px;
+      &::before {
+         content: 'Switch Theme @';
+      }
+   }
+}
+
+.top-btn {
+   position: fixed;
+   bottom: 5%;
+   min-width: 70px;
+   width: fit-content;
+   &:hover {
+      border-radius: 2rem;
+   }
 }
