--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -8,6 +8,8 @@
    flex-flow: column;
    position: relative;
 
+   // background-color: var(--surface);
+
    // overflow-y: scroll;
    // scroll-snap-type: y mandatory;
    // -ms-scroll-snap-type: y mandatory;
