--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -27,6 +27,9 @@
 }
 
 .header {
+   --shadow-white: 255, 255, 255;
+   --shadow-black: 0, 0, 0;
+
    height: 200vw;
    position: relative;
    background-image: url('../../images/background/ai-generated-8965879_1280.webp');
@@ -118,14 +121,9 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: var(--shadow);
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
-      //   background: linear-gradient(
-      //      0deg,
-      //      rgba(255, 255, 255, 0.8) 0%,
-      //      rgba(255, 255, 255, 0.8) 50%,
-      //      rgba(255, 255, 255, 0) 100%
-      //   );
+      background: light-dark(rgba(var(--shadow-black), 0.4), rgba(var(--shadow-white), 0.4));
+      //   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
+
       z-index: -1;
    }
 }
