--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -9,10 +9,27 @@
    position: relative;
 
    &__title {
+      margin-top: 10rem;
+      margin-bottom: 5rem;
       font-weight: 400;
+      text-transform: uppercase;
 
       &_title {
+         font-size: 2.5rem;
+
+         &-colored {
+            color: var(--primary);
+            font-family: 'Caveat', cursive;
+            font-style: italic;
+            text-transform: none;
+
+            font-size: 3.75rem;
+            line-height: 2.4rem;
+            font-weight: 400;
+            margin-left: 30vw;
+         }
       }
+
       &_description {
       }
    }
@@ -121,10 +138,9 @@
       top: 0;
       width: 100%;
       height: 100%;
+      z-index: -1;
       background: light-dark(rgba(var(--shadow-black), 0.4), rgba(var(--shadow-white), 0.4));
       //   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
-
-      z-index: -1;
    }
 }
 
