--- a/esoteric/vite-sass/src/scss/_fonts.scss
+++ b/esoteric/vite-sass/src/scss/_fonts.scss
@@ -1,26 +1,26 @@
 @font-face {
-   font-family: "Montserrat";
+   font-family: 'Montserrat';
    src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
    font-weight: 400;
    font-display: swap;
 }
 
 @font-face {
-   font-family: "Montserrat";
+   font-family: 'Montserrat';
    src: url('../fonts/Montserrat-Bold.woff2') format('woff2');
    font-weight: 700;
    font-display: swap;
 }
 
 @font-face {
-   font-family: "Schoolbell";
+   font-family: 'Schoolbell';
    src: url('../fonts/Schoolbell-Regular.ttf') format('ttf');
    font-weight: 400;
    font-display: swap;
 }
 
 @font-face {
-   font-family: "Caveat";
+   font-family: 'Caveat';
    src: url('../fonts/Caveat-VariableFont_wght.ttf') format('ttf');
    font-weight: 400;
    font-display: swap;
