--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -51,6 +51,7 @@
    --shadow-black: 0, 0, 0;
 
    height: 200vw;
+   min-height: 200vw;
    position: relative;
    background-image: url('../../images/background/ai-generated-8965879_1280.webp');
    background-size: cover;
@@ -108,6 +109,7 @@
 
    &__subtitle {
       font-size: 1.75rem;
+      font-weight: 400;
    }
 
    &__button {
