--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -113,9 +113,9 @@
    }
 
    &__button {
-      padding: 1rem 4rem;
-      border-radius: 1.6rem;
-      margin: 0 auto;
+      padding: 1.1rem 4rem;
+      border-radius: 1.125rem;
+      margin: 0 2rem;
       color: var(--on-primary);
       background-color: var(--primary);
    }
