--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -182,7 +182,7 @@
       text-align: left;
       background: var(--surface);
       color: var(--on-surface);
-      width: 230px;
+      width: 74vw;
       height: auto;
 
       padding: 1.4rem;
@@ -254,5 +254,45 @@
    }
 
    &__item-text {
+   }
+}
+
+.features {
+   .section__title_title-colored {
+      margin-left: unset;
+   }
+   &__list,
+   &__item {
+      display: flex;
+      flex-direction: column;
+      gap: 3.2rem;
+   }
+
+   &__list {
+   }
+
+   &__item {
+      width: 87.5vw;
+      gap: 2rem;
+      border-radius: 2rem;
+
+      &-image {
+         width: 100%;
+         height: 50vw;
+         border-radius: 2.4rem;
+         overflow: hidden;
+
+         img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+         }
+      }
+
+      &-text {
+         span {
+            font-weight: bold;
+         }
+      }
    }
 }
