--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -38,6 +38,8 @@
       display: flex;
       flex-flow: row wrap;
       justify-content: center;
+      // flex-direction: column;
+      // align-items: center;
    }
 
    &__conclusion {
@@ -295,4 +297,84 @@
          }
       }
    }
+}
+
+.about {
+   .section__content {
+      gap: 3rem;
+   }
+
+   &__article {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+
+      text-align: left;
+      width: 90vw;
+
+      &__text {
+         margin: 0.75rem 0;
+         &::first-letter {
+            text-transform: capitalize;
+         }
+      }
+
+      &__picture {
+         width: 100%;
+         background: transparent;
+
+         &-frame {
+            display: block;
+            box-sizing: border-box;
+            width: 40vw;
+            height: calc(40vw + 2rem);
+            margin: 0;
+            margin-left: 10vw;
+            transform: rotate(-10deg);
+            padding: 1.2rem;
+            padding-bottom: 3.8rem;
+            border: 1px solid var(--primary);
+            background: var(--surface-container-lowest);
+         }
+
+         img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+         }
+      }
+
+      &:last-child &__picture-frame {
+         margin-top: -20%;
+         margin-left: auto;
+         margin-right: 10vw;
+         transform: rotate(10deg);
+      }
+   }
+
+   &__article-content {
+      ul {
+         padding-top: 0.2rem;
+         padding-left: 2.4rem;
+      }
+
+      li {
+         list-style-type: none;
+         padding-inline-start: 1ch;
+         position: relative;
+
+         .ico {
+            display: block;
+            position: absolute;
+            content: url('../../images/icons/symbol-svgrepo.svg');
+            top: 0.8rem;
+            left: -2.4rem;
+            width: 2rem;
+            height: 2rem;
+         }
+      }
+   }
+}
+
+.colored {
 }
