--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -1,6 +1,11 @@
 .container {
 }
 
+:root {
+   --shadow-white: 255, 255, 255;
+   --shadow-black: 0, 0, 0;
+}
+
 .section {
    display: flex;
    align-items: stretch;
@@ -49,9 +54,6 @@
 }
 
 .header {
-   --shadow-white: 255, 255, 255;
-   --shadow-black: 0, 0, 0;
-
    height: 200vw;
    min-height: 200vw;
    position: relative;
@@ -147,7 +149,6 @@
       height: 100%;
       z-index: -1;
       background: light-dark(rgba(var(--shadow-black), 0.4), rgba(var(--shadow-white), 0.4));
-      //   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
    }
 }
 
@@ -377,4 +378,55 @@
 }
 
 .colored {
+}
+
+.description {
+   &__content {
+      ul,
+      li {
+         display: flex;
+         flex-direction: column;
+      }
+
+      li {
+         width: 90vw;
+         height: 45vw;
+         border-radius: 1.8rem;
+         align-items: center;
+         padding: 1rem 1rem 2.4rem;
+         color: var(--on-primary);
+         background: var(--primary);
+         position: relative;
+         z-index: 0;
+
+         &::before {
+            display: block;
+            position: absolute;
+            min-width: 100%;
+            min-height: 100%;
+            content: '';
+            top: 0;
+            left: 0;
+            border-radius: 1.8rem;
+            background: linear-gradient(0deg, rgba(var(--shadow-black), 0.1) 0%, rgba(var(--shadow-white), 0) 100%);
+            z-index: -1;
+         }
+      }
+
+      &-marker {
+         font-weight: 400;
+         font-size: 2rem;
+         margin: 0;
+         font-family: 'Caveat', cursive;
+         font-style: italic;
+         text-transform: none;
+         justify-self: flex-start;
+      }
+
+      &-text {
+         font-weight: 600;
+         justify-self: center;
+         margin: auto 0;
+      }
+   }
 }
