--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -22,16 +22,18 @@
       &_title {
          font-size: 2.5rem;
 
+         &-cursive,
          &-colored {
-            color: var(--primary);
             font-family: 'Caveat', cursive;
             font-style: italic;
             text-transform: none;
-
             font-size: 3.75rem;
             line-height: 2.4rem;
             font-weight: 400;
             margin-left: 30vw;
+         }
+         &-colored {
+            color: var(--primary);
          }
       }
 
@@ -380,7 +382,8 @@
 .colored {
 }
 
-.description {
+.description,
+.results {
    &__content {
       ul,
       li {
@@ -427,6 +430,80 @@
          font-weight: 600;
          justify-self: center;
          margin: auto 0;
+         &::first-letter {
+            text-transform: capitalize;
+         }
+      }
+   }
+}
+
+.description {
+   background-color: var(--primary);
+   border-radius: 4rem;
+   margin-top: 5rem;
+   padding: 7.5rem 0;
+
+   .section__title {
+      margin-top: 0rem;
+      color: var(--on-primary);
+
+      &_title {
+         margin-left: -20vw;
+      }
+   }
+
+   &__content {
+      ul {
+         gap: 1rem;
+      }
+
+      li {
+         color: var(--primary);
+         background: var(--on-primary);
+         border-radius: 3.6rem;
+         min-height: 65vw;
+         height: auto;
+         padding: 2rem;
+         gap: 2rem;
+
+         &::before {
+            display: none;
+         }
+
+         & > div {
+            width: 100%;
+            height: 40vw;
+            border: 0.5rem solid var(--primary);
+            border-radius: 2rem;
+            position: relative;
+            box-shadow: 0rem -2rem 2.4rem -1rem rgba(var(--shadow-black), 0.3) inset;
+
+            img {
+               position: absolute;
+               left: 0;
+               top: 0;
+               width: 100%;
+               height: 100%;
+               object-fit: cover;
+               border-radius: 2rem;
+               z-index: -1;
+            }
+         }
+      }
+
+      &-marker {
+         font-family: 'Montserrat', sans-serif;
+         font-weight: 600;
+         font-size: 2rem;
+         margin: 0;
+         margin-left: auto;
+         font-style: normal;
+      }
+
+      &-text {
+         text-align: left;
+         justify-self: flex-start;
+         align-self: flex-start;
       }
    }
 }
