--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -452,6 +452,52 @@
          margin-left: -20vw;
       }
    }
+
+   &__conclusion {
+      &-list {
+         color: var(--on-primary);
+         display: flex;
+         flex-direction: column;
+         gap: 1.6rem;
+         width: 87.5vw;
+         margin: 3rem auto;
+         padding-left: 2rem;
+      }
+
+      &-item {
+         position: relative;
+         padding-inline-start: 3rem;
+
+         &::before {
+            position: absolute;
+            left: -2rem;
+            content: url('../../assets/images/icons/add-plus-svgrepo-com-2.svg');
+            width: 3.75rem;
+            height: 3.75rem;
+            transform: rotate(-4deg);
+         }
+      }
+
+      .description__content-text {
+         font-weight: 400;
+      }
+
+      &-gift {
+         position: absolute;
+         right: -1rem;
+         bottom: -2rem;
+         content: url('../../assets/images/pictures/blue-gift-3.png');
+         width: 12rem;
+         height: 12rem;
+         transform: rotate(4deg);
+
+         img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+         }
+      }
+   }
 }
 
 .testimonials,
