feat: modify results section

--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -460,6 +460,7 @@
       min-height: 14rem;
       padding: 3rem;
       display: flex;
+      text-align: left;
       align-items: center;
       font-weight: 400;
       text-transform: none;
